#include <gmock/gmock.h>
#include <gtest/gtest.h>

#include <memory>
#include <string>
#include <vector>

#include <chrono>
#include <ctime>
#include <iomanip>

#include "coordinator/coordinator.grpc.pb.h"
#include "coordinator_service_impl.h"
#include "mock_datanode_client.h"
#include <grpcpp/grpcpp.h>

// Test fixture for common setup
class CoordinatorServiceTest : public ::testing::Test {
protected:
  void SetUp() override {
    // TODO: Destroying the CoordinatorServiceImpl takes nearly a second! Too
    // expensive probably
    //       due to background threads.
    //  Lets just create one for the entire suite instead of each test method,
    //  for now
    mock_factory = std::make_unique<MockDataNodeClientFactory>();
    coordinator =
        std::make_unique<CoordinatorServiceImpl>(std::move(mock_factory));
  }

  std::unique_ptr<MockDataNodeClientFactory> mock_factory;
  std::unique_ptr<CoordinatorServiceImpl> coordinator;
};

// ========== NODE REGISTRATION TESTS ==========

TEST_F(CoordinatorServiceTest, RegisterDataNodeSuccess) {
  std::cout << ([] {
    auto now = std::chrono::system_clock::now();
    auto t = std::chrono::system_clock::to_time_t(now);
    auto ms = std::chrono::duration_cast<std::chrono::milliseconds>(
                  now.time_since_epoch()) %
              1000;
    std::ostringstream oss;
    oss << std::put_time(std::localtime(&t), "%Y-%m-%d %H:%M:%S") << '.'
        << std::setfill('0') << std::setw(3) << ms.count();
    return oss.str();
  })() << " RegisterDataNodeSuccess Start"
            << std::endl;
  // Test successful DataNode registration - verify node gets unique ID,
  // is added to registry, and response indicates success

  // Create concrete gRPC context (peer info will be empty/default)
  grpc::ServerContext context;

  // Create registration request
  dfs::RegisterDataNodeRequest request;
  request.set_port(8080);

  // Create response object
  dfs::RegisterDataNodeResponse response;

  // Execute RegisterDataNode method
  grpc::Status status =
      coordinator->RegisterDataNode(&context, &request, &response);

  // Verify successful registration
  EXPECT_TRUE(status.ok());
  EXPECT_TRUE(response.success());
  EXPECT_EQ(response.node_id(), 1);  // First node should get ID 1
  EXPECT_TRUE(response.error_message().empty());

  // Note: Address verification depends on gRPC context peer extraction
  // In a real scenario with actual client connection, this would contain the
  // client IP For this test with concrete ServerContext, the address may be
  // empty or default
  std::cout << ([] {
    auto now = std::chrono::system_clock::now();
    auto t = std::chrono::system_clock::to_time_t(now);
    auto ms = std::chrono::duration_cast<std::chrono::milliseconds>(
                  now.time_since_epoch()) %
              1000;
    std::ostringstream oss;
    oss << std::put_time(std::localtime(&t), "%Y-%m-%d %H:%M:%S") << '.'
        << std::setfill('0') << std::setw(3) << ms.count();
    return oss.str();
  })() << " RegisterDataNodeSuccess done"
            << std::endl;
}

TEST_F(CoordinatorServiceTest, RegisterMultipleDataNodes) {
  // Test registering multiple DataNodes - verify sequential ID assignment and
  // all nodes are tracked in registry

  // Set up expectations for mock factory (not used in registration but required
  // for constructor)
  // EXPECT_CALL(*mock_factory, CreateClient(::testing::_, ::testing::_))
  //    .Times(0);  // Should not be called during registration

  // Test data for multiple nodes
  const int num_nodes = 3;
  std::vector<int> ports = {8081, 8082, 8083};
  std::vector<int> expected_ids = {1, 2, 3};

  // Register multiple nodes
  for (int i = 0; i < num_nodes; ++i) {
    // Create concrete gRPC context for each registration
    grpc::ServerContext context;

    // Create registration request
    dfs::RegisterDataNodeRequest request;
    request.set_port(ports[i]);

    // Create response object
    dfs::RegisterDataNodeResponse response;

    // Execute RegisterDataNode method
    grpc::Status status =
        coordinator->RegisterDataNode(&context, &request, &response);

    // Verify successful registration
    EXPECT_TRUE(status.ok()) << "Registration " << (i + 1) << " failed";
    EXPECT_TRUE(response.success())
        << "Registration " << (i + 1) << " returned failure";
    EXPECT_EQ(response.node_id(), expected_ids[i])
        << "Registration " << (i + 1) << " has wrong node ID";
    EXPECT_TRUE(response.error_message().empty())
        << "Registration " << (i + 1) << " has error message";
  }

  // Note: Cannot verify internal registry state without accessor methods
  // The test focuses on verifying the registration API behavior and responses
}

TEST_F(CoordinatorServiceTest, RegisterDataNodeWithPortConflict) {
  // Test registering DataNode with address:port conflict - should fail when
  // address:port already registered

  // Step 1: Register first node successfully
  grpc::ServerContext context1;
  dfs::RegisterDataNodeRequest request1;
  request1.set_port(8088);
  dfs::RegisterDataNodeResponse response1;

  grpc::Status status1 =
      coordinator->RegisterDataNode(&context1, &request1, &response1);

  // Verify first registration succeeds
  EXPECT_TRUE(status1.ok());
  EXPECT_TRUE(response1.success());
  EXPECT_EQ(response1.node_id(), 1);
  EXPECT_TRUE(response1.error_message().empty());

  // Step 2: Try to register same address:port again - should fail
  grpc::ServerContext context2;
  dfs::RegisterDataNodeRequest request2;
  request2.set_port(8088);  // Same port as first registration
  dfs::RegisterDataNodeResponse response2;

  grpc::Status status2 =
      coordinator->RegisterDataNode(&context2, &request2, &response2);

  // Verify second registration fails due to conflict
  EXPECT_TRUE(status2.ok());          // gRPC call succeeds
  EXPECT_FALSE(response2.success());  // But registration fails
  EXPECT_EQ(response2.node_id(), 0);  // No ID assigned on failure
  EXPECT_FALSE(
      response2.error_message().empty());  // Error message should be provided

  // Step 3: Register different address:port - should succeed
  grpc::ServerContext context3;
  dfs::RegisterDataNodeRequest request3;
  request3.set_port(8089);  // Different port
  dfs::RegisterDataNodeResponse response3;

  grpc::Status status3 =
      coordinator->RegisterDataNode(&context3, &request3, &response3);

  // Verify third registration succeeds
  EXPECT_TRUE(status3.ok());
  EXPECT_TRUE(response3.success());
  EXPECT_EQ(response3.node_id(), 2);  // Next available ID
  EXPECT_TRUE(response3.error_message().empty());
}

// ========== NODE UNREGISTRATION TESTS ==========

TEST_F(CoordinatorServiceTest, UnregisterDataNodeSuccess) {
  GTEST_SKIP() << "TODO: Test successful DataNode unregistration - verify node "
                  "is removed from registry and response indicates success";
}

TEST_F(CoordinatorServiceTest, UnregisterNonExistentNode) {
  GTEST_SKIP() << "TODO: Test unregistering non-existent node - should return "
                  "error response but not crash";
}

TEST_F(CoordinatorServiceTest, UnregisterNodeWithActiveFiles) {
  GTEST_SKIP() << "TODO: Test unregistering node that has file chunks - should "
                  "handle replica management and potential data migration";
}

// ========== FILE DELETION TESTS ==========

TEST_F(CoordinatorServiceTest, DeleteFileNotFound) {
  GTEST_SKIP() << "TODO: Test deleting non-existent file - should return error "
                  "but not crash";
}

TEST_F(CoordinatorServiceTest, DeleteFileSuccess) {
  GTEST_SKIP() << "TODO: Test successful file deletion - verify file is marked "
                  "as deleted (tombstone) and deletion response is success";
}

TEST_F(CoordinatorServiceTest, DeleteFileWithMultipleChunks) {
  GTEST_SKIP() << "TODO: Test deleting file with multiple chunks - verify all "
                  "chunks are marked for deletion across all replica nodes";
}

TEST_F(CoordinatorServiceTest, DeleteFileDuringRead) {
  GTEST_SKIP() << "TODO: Test file deletion during active read operation - "
                  "verify tombstone mechanism prevents race conditions";
}

// ========== PUTFILE STREAMING TESTS ==========

TEST_F(CoordinatorServiceTest, PutFileSingleChunk) {
  GTEST_SKIP() << "TODO: Test PutFile with single chunk - verify chunk "
                  "distribution to replica nodes and metadata storage";
}

TEST_F(CoordinatorServiceTest, PutFileMultipleChunks) {
  GTEST_SKIP() << "TODO: Test PutFile with multiple chunks - verify all chunks "
                  "are distributed correctly and metadata tracks all chunks";
}

TEST_F(CoordinatorServiceTest, PutFileEmptyFile) {
  GTEST_SKIP() << "TODO: Test PutFile with empty file - should handle "
                  "gracefully, possibly create minimal metadata or reject";
}

TEST_F(CoordinatorServiceTest, PutFileLargeFile) {
  GTEST_SKIP() << "TODO: Test PutFile with large file (>1MB) - verify chunking "
                  "works correctly and all chunks are distributed";
}

TEST_F(CoordinatorServiceTest, PutFileWithNodeFailure) {
  GTEST_SKIP() << "TODO: Test PutFile when some replica nodes fail - verify "
                  "retry logic and error handling";
}

TEST_F(CoordinatorServiceTest, PutFileNoNodesAvailable) {
  GTEST_SKIP() << "TODO: Test PutFile when no DataNodes are registered - "
                  "should return appropriate error";
}

TEST_F(CoordinatorServiceTest, PutFilePartialWriteFailure) {
  GTEST_SKIP() << "TODO: Test PutFile when write fails partway through - "
                  "verify cleanup of partial writes and error response";
}

TEST_F(CoordinatorServiceTest, PutFileConcurrentUploads) {
  GTEST_SKIP() << "TODO: Test concurrent PutFile operations - verify thread "
                  "safety and correct metadata isolation";
}

// ========== GETFILE STREAMING TESTS ==========

TEST_F(CoordinatorServiceTest, GetFileNotFound) {
  GTEST_SKIP() << "TODO: Test GetFile for non-existent file - should return "
                  "NOT_FOUND error";
}

TEST_F(CoordinatorServiceTest, GetFileSuccess) {
  GTEST_SKIP() << "TODO: Test successful GetFile - verify all chunks are read "
                  "and streamed correctly to client";
}

TEST_F(CoordinatorServiceTest, GetFileSingleChunk) {
  GTEST_SKIP() << "TODO: Test GetFile for single-chunk file - verify chunk is "
                  "read from replica and streamed";
}

TEST_F(CoordinatorServiceTest, GetFileMultipleChunks) {
  GTEST_SKIP() << "TODO: Test GetFile for multi-chunk file - verify all chunks "
                  "are assembled in correct order";
}

TEST_F(CoordinatorServiceTest, GetFileWithReplicaFallback) {
  GTEST_SKIP() << "TODO: Test GetFile when primary replica fails - verify "
                  "fallback to other replicas works correctly";
}

TEST_F(CoordinatorServiceTest, GetFileAllReplicasDown) {
  GTEST_SKIP() << "TODO: Test GetFile when all replicas are unavailable - "
                  "should return appropriate error";
}

TEST_F(CoordinatorServiceTest, GetFilePartialReadFailure) {
  GTEST_SKIP() << "TODO: Test GetFile when read fails partway through - verify "
                  "proper error handling and cleanup";
}

TEST_F(CoordinatorServiceTest, GetFileDeletedFile) {
  GTEST_SKIP() << "TODO: Test GetFile for deleted file (tombstone) - should "
                  "return NOT_FOUND error";
}

// ========== REPLICATION AND FAULT TOLERANCE TESTS ==========

TEST_F(CoordinatorServiceTest, ReplicationFactorConfiguration) {
  GTEST_SKIP() << "TODO: Test different replication factors - verify correct "
                  "number of replicas are created";
}

TEST_F(CoordinatorServiceTest, NodeFailureDuringReplication) {
  GTEST_SKIP() << "TODO: Test node failure during replication process - verify "
                  "retry and alternative node selection";
}

TEST_F(CoordinatorServiceTest, ReplicaConsistency) {
  GTEST_SKIP() << "TODO: Test replica consistency - verify all replicas of a "
                  "chunk contain identical data";
}

TEST_F(CoordinatorServiceTest, RoundRobinNodeSelection) {
  GTEST_SKIP() << "TODO: Test round-robin node selection for replication - "
                  "verify even distribution across nodes";
}

// ========== EDGE CASES AND ERROR HANDLING TESTS ==========

TEST_F(CoordinatorServiceTest, InvalidFileNames) {
  GTEST_SKIP() << "TODO: Test various invalid filename formats - empty "
                  "strings, special characters, path traversal attempts";
}

TEST_F(CoordinatorServiceTest, NetworkTimeouts) {
  GTEST_SKIP() << "TODO: Test network timeout scenarios - verify timeout "
                  "handling and retry logic";
}

TEST_F(CoordinatorServiceTest, MalformedRequests) {
  GTEST_SKIP() << "TODO: Test malformed or corrupted request data - verify "
                  "graceful error handling";
}

TEST_F(CoordinatorServiceTest, ResourceExhaustion) {
  GTEST_SKIP() << "TODO: Test resource exhaustion scenarios - disk full, "
                  "memory limits, connection limits";
}

// ========== CONCURRENT OPERATIONS TESTS ==========

TEST_F(CoordinatorServiceTest, ConcurrentPutAndGet) {
  GTEST_SKIP() << "TODO: Test concurrent PutFile and GetFile operations on "
                  "same file - verify consistency";
}

TEST_F(CoordinatorServiceTest, ConcurrentRegistrations) {
  GTEST_SKIP() << "TODO: Test concurrent DataNode registration/unregistration "
                  "- verify thread safety";
}

TEST_F(CoordinatorServiceTest, ConcurrentFileOperations) {
  GTEST_SKIP() << "TODO: Test multiple concurrent file operations - PutFile, "
                  "GetFile, DeleteFile";
}

// ========== PERFORMANCE AND STRESS TESTS ==========

TEST_F(CoordinatorServiceTest, LargeScaleFileOperations) {
  GTEST_SKIP() << "TODO: Test performance with large numbers of files - verify "
                  "metadata store performance";
}

TEST_F(CoordinatorServiceTest, HighConcurrencyLoad) {
  GTEST_SKIP() << "TODO: Test high concurrency scenarios - many concurrent "
                  "operations, verify no deadlocks or corruption";
}

TEST_F(CoordinatorServiceTest, MemoryUsageUnderLoad) {
  GTEST_SKIP() << "TODO: Test memory usage patterns under sustained load - "
                  "verify no memory leaks";
}

// ========== INTEGRATION TESTS ==========

TEST_F(CoordinatorServiceTest, PutFileThenGetFile) {
  GTEST_SKIP() << "TODO: Integration test - PutFile followed by GetFile - "
                  "verify end-to-end file storage and retrieval";
}

TEST_F(CoordinatorServiceTest, PutFileDeleteFileGetFile) {
  GTEST_SKIP() << "TODO: Integration test - PutFile, DeleteFile, then GetFile "
                  "- verify tombstone mechanism works";
}

TEST_F(CoordinatorServiceTest, FullWorkflowWithReplication) {
  GTEST_SKIP() << "TODO: Complete workflow test - register nodes, PutFile, "
                  "GetFile, DeleteFile, unregister nodes";
}

// ========== STRESS AND RECOVERY TESTS ==========

TEST_F(CoordinatorServiceTest, CoordinatorRestartRecovery) {
  GTEST_SKIP() << "TODO: Test coordinator restart - verify state recovery and "
                  "ongoing operation handling";
}

TEST_F(CoordinatorServiceTest, NodeRestartDuringOperations) {
  GTEST_SKIP() << "TODO: Test DataNode restart during active operations - "
                  "verify reconnection and state reconciliation";
}

TEST_F(CoordinatorServiceTest, NetworkPartitionRecovery) {
  GTEST_SKIP() << "TODO: Test network partition scenarios - verify recovery "
                  "when connectivity is restored";
}

// ========== METADATA STORE TESTS ==========

TEST_F(CoordinatorServiceTest, MetadataStorePersistence) {
  GTEST_SKIP() << "TODO: Test metadata persistence across coordinator restarts "
                  "- verify file metadata survives restart";
}

TEST_F(CoordinatorServiceTest, MetadataStoreCorruptionRecovery) {
  GTEST_SKIP() << "TODO: Test recovery from corrupted metadata store - verify "
                  "graceful handling and potential recovery mechanisms";
}

TEST_F(CoordinatorServiceTest, MetadataStoreConcurrentAccess) {
  GTEST_SKIP() << "TODO: Test concurrent access to metadata store - verify "
                  "thread safety of metadata operations";
}

TEST_F(CoordinatorServiceTest, MetadataStoreMemoryUsage) {
  GTEST_SKIP() << "TODO: Test metadata store memory usage with many files - "
                  "verify efficient storage and retrieval";
}

// ========== BACKGROUND CLEANUP THREAD TESTS ==========

TEST_F(CoordinatorServiceTest, CleanupThreadTombstoneProcessing) {
  GTEST_SKIP() << "TODO: Test background cleanup of deleted file tombstones - "
                  "verify proper timing and execution";
}

TEST_F(CoordinatorServiceTest, CleanupThreadChunkDeletion) {
  GTEST_SKIP() << "TODO: Test cleanup thread properly deletes chunks from all "
                  "replica nodes - verify all replicas are cleaned up";
}

TEST_F(CoordinatorServiceTest, CleanupThreadLifecycle) {
  GTEST_SKIP() << "TODO: Test cleanup thread lifecycle - verify proper "
                  "startup, execution, and shutdown";
}

TEST_F(CoordinatorServiceTest, CleanupThreadErrorHandling) {
  GTEST_SKIP() << "TODO: Test cleanup thread error handling - verify thread "
                  "continues operating despite individual cleanup failures";
}

// ========== NETWORK AND CONNECTION MANAGEMENT TESTS ==========

TEST_F(CoordinatorServiceTest, ClientAddressExtraction) {
  GTEST_SKIP() << "TODO: Test extractClientAddress correctly parses IPv4 and "
                  "IPv6 addresses from gRPC context";
}

TEST_F(CoordinatorServiceTest, ConnectionHandlingUnderLoad) {
  GTEST_SKIP() << "TODO: Test coordinator handles many concurrent connections "
                  "- verify no connection leaks or exhaustion";
}

TEST_F(CoordinatorServiceTest, ConnectionTimeoutHandling) {
  GTEST_SKIP() << "TODO: Test connection timeout scenarios - verify graceful "
                  "handling of network timeouts";
}

TEST_F(CoordinatorServiceTest, MalformedNetworkPackets) {
  GTEST_SKIP() << "TODO: Test handling of malformed network packets - verify "
                  "robustness against corrupted data";
}

// ========== CHUNK DISTRIBUTION ALGORITHM TESTS ==========

TEST_F(CoordinatorServiceTest, ChunkDistributionRoundRobin) {
  GTEST_SKIP() << "TODO: Test round-robin chunk distribution across nodes - "
                  "verify even distribution pattern";
}

TEST_F(CoordinatorServiceTest, ChunkDistributionWithNodeFailures) {
  GTEST_SKIP() << "TODO: Test chunk distribution when some nodes are "
                  "unavailable - verify alternative node selection";
}

TEST_F(CoordinatorServiceTest, ChunkDistributionInsufficientNodes) {
  GTEST_SKIP() << "TODO: Test chunk distribution with insufficient nodes for "
                  "replication - verify appropriate error handling";
}

TEST_F(CoordinatorServiceTest, ChunkDistributionNodeWeighting) {
  GTEST_SKIP() << "TODO: Test chunk distribution considers node "
                  "capacity/weighting - verify intelligent node selection";
}

// ========== REPLICA MANAGEMENT TESTS ==========

TEST_F(CoordinatorServiceTest, ReplicaVerification) {
  GTEST_SKIP() << "TODO: Test readChunkWithFallback correctly tries all "
                  "replicas in order - verify fallback mechanism";
}

TEST_F(CoordinatorServiceTest, ReplicaInconsistencyDetection) {
  GTEST_SKIP() << "TODO: Test detection and handling of inconsistent replicas "
                  "- verify data integrity checks";
}

TEST_F(CoordinatorServiceTest, ReplicaRebalancing) {
  GTEST_SKIP() << "TODO: Test replica rebalancing after node addition/removal "
                  "- verify even distribution maintenance";
}

TEST_F(CoordinatorServiceTest, ReplicaHealthMonitoring) {
  GTEST_SKIP() << "TODO: Test replica health monitoring - verify detection of "
                  "failed or corrupted replicas";
}

// ========== RESOURCE MANAGEMENT TESTS ==========

TEST_F(CoordinatorServiceTest, MemoryUsageLimits) {
  GTEST_SKIP() << "TODO: Test coordinator respects memory usage limits - "
                  "verify memory is properly managed";
}

TEST_F(CoordinatorServiceTest, FileDescriptorCleanup) {
  GTEST_SKIP() << "TODO: Test proper cleanup of file descriptors and "
                  "connections - verify no resource leaks";
}

TEST_F(CoordinatorServiceTest, ThreadPoolManagement) {
  GTEST_SKIP() << "TODO: Test thread pool management for async operations - "
                  "verify proper thread lifecycle";
}

TEST_F(CoordinatorServiceTest, DiskSpaceMonitoring) {
  GTEST_SKIP() << "TODO: Test disk space monitoring and handling - verify "
                  "behavior when disk space is low";
}

// ========== CONFIGURATION AND LIMITS TESTS ==========

TEST_F(CoordinatorServiceTest, MaximumFileSize) {
  GTEST_SKIP() << "TODO: Test handling of files at maximum supported size - "
                  "verify chunking and storage works correctly";
}

TEST_F(CoordinatorServiceTest, MaximumNodesSupported) {
  GTEST_SKIP() << "TODO: Test coordinator with maximum number of registered "
                  "nodes - verify scalability limits";
}

TEST_F(CoordinatorServiceTest, MaximumConcurrentOperations) {
  GTEST_SKIP() << "TODO: Test maximum concurrent operations supported - verify "
                  "performance under high load";
}

TEST_F(CoordinatorServiceTest, ConfigurationValidation) {
  GTEST_SKIP() << "TODO: Test configuration validation - verify invalid "
                  "configurations are rejected";
}

// ========== SECURITY AND VALIDATION TESTS ==========

TEST_F(CoordinatorServiceTest, PathTraversalProtection) {
  GTEST_SKIP() << "TODO: Test protection against path traversal attacks in "
                  "filenames - verify security measures";
}

TEST_F(CoordinatorServiceTest, InputValidation) {
  GTEST_SKIP() << "TODO: Test comprehensive input validation for all request "
                  "fields - verify robust input handling";
}

TEST_F(CoordinatorServiceTest, AuthenticationAndAuthorization) {
  GTEST_SKIP() << "TODO: Test authentication and authorization mechanisms - "
                  "verify access control";
}

TEST_F(CoordinatorServiceTest, RequestSizeLimits) {
  GTEST_SKIP() << "TODO: Test request size limits - verify handling of "
                  "oversized requests";
}

// ========== FAULT INJECTION TESTS ==========

TEST_F(CoordinatorServiceTest, DiskFailureSimulation) {
  GTEST_SKIP() << "TODO: Test behavior under simulated disk failures - verify "
                  "fault tolerance";
}

TEST_F(CoordinatorServiceTest, MemoryAllocationFailures) {
  GTEST_SKIP() << "TODO: Test behavior when memory allocation fails - verify "
                  "graceful degradation";
}

TEST_F(CoordinatorServiceTest, NetworkFailureSimulation) {
  GTEST_SKIP() << "TODO: Test behavior under simulated network failures - "
                  "verify recovery mechanisms";
}

TEST_F(CoordinatorServiceTest, CorruptionDetection) {
  GTEST_SKIP() << "TODO: Test detection of corrupted data or metadata - verify "
                  "integrity checking";
}
